--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ ext {
     gradleDownloadTaskVersion = "2.1.0"
     hamcrestVersion = "1.3"
     httpClientVersion = "4.5.1"
-    imagePrefix = 'mesos'
+    imagePrefix = 'thermeon'
     jcommanderVersion = "1.48"
     jodaTimeVersion = "2.9.2"
     jsonVersion = "20160212"
